<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/dynamics"
        android:title="@string/dynamics"
        android:icon="@drawable/ic_insights"

      />

    <item
        android:id="@+id/info"
        android:title="@string/info"
        android:icon="@drawable/ic__med_information"
        />

    <item
        android:id="@+id/blank"
        android:title=""
        android:enabled="false"
        />

    <item
        android:id="@+id/report"
        android:title="@string/report"
        android:icon="@drawable/ic_bar_chart"
        />

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_person"
        />






</menu>