<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_blue"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Common.WelcomeScreen">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
      >
        <ImageView
            android:id="@+id/welcome_image"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:contentDescription="@string/welcome_image_desc"
            android:src="@drawable/blood_pressure2" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/welcome_title"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/welcome_to"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="120dp"
                android:layout_height="43dp"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginTop="-1dp"
                app:lottie_autoPlay="true"
                app:lottie_colorFilter="@color/greenish"
                app:lottie_loop="false"
                app:lottie_rawRes="@raw/logo_health_lift" />
        </LinearLayout>
        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-5dp"
            android:alpha="0.7"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/welcome_tagline"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />
    </LinearLayout>



    <!--        />-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"


        >

        <Button
            android:id="@+id/welcome_login"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:backgroundTint="@color/greenish"
            android:paddingVertical="13dp"
            android:text="@string/user_login"
            android:textColor="@color/white"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:focusable="true"
                android:text="@string/do_not_have_any_account"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/welcome_signup"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/get_registered"
                android:textAlignment="center"
                android:textColor="@color/greenish"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>