<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.Login"
    android:layout_gravity="center_vertical"
    android:background="@drawable/bg_white"
    android:transitionName="splashAnimation"
    android:orientation="vertical"
    android:padding="30dp">



    <!--    back arrow -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_back_btn"
        android:paddingVertical="10dp"
        android:paddingEnd="15dp"
        android:paddingStart="5dp"
        android:src="@drawable/arrow_back_24"
        android:transitionName="transition_back_arrow_btn"/>

    <!--    Sign in title -->
    <TextView
        android:id="@+id/signup_title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/sign_in_title"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        android:transitionName="appNameAnimation" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/signup_subtitle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/do_not_have_any_account"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:transitionName="appNameAnimation" />

        <TextView
            android:id="@+id/login_signup_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/get_registered"
            android:textColor="@color/blue_dark"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <!--            material design text Fields-->

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/hint_color"
            app:boxStrokeColor="@color/input_border_color"
            app:boxStrokeWidthFocused="1dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:startIconDrawable="@drawable/email_24"
            app:hintTextColor="@color/black"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"

                />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:textColorHint="@color/hint_color"
            app:boxStrokeColor="@color/input_border_color"
            app:boxStrokeWidthFocused="1dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/password_lock_24"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColor="@color/black"

                />


        </com.google.android.material.textfield.TextInputLayout>

        <!--            remember me and forget password buttons-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <CheckBox
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:buttonTint="@color/black"
                android:text="@string/remember_me"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/forgot_password"
                android:textColor="@color/blue_dark"
                tools:ignore="RelativeOverlap"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true" />



        </RelativeLayout>

        <Button
            android:id="@+id/user_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/greenish"
            android:elevation="5dp"
            android:paddingVertical="15dp"
            android:text="@string/user_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:transitionName="transition_login" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            >


            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:background="@color/greenish"
                android:layout_gravity="center_vertical"
                />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textAlignment="center"
                android:layout_gravity="center_vertical"
                android:textSize="16sp"
                android:textAllCaps="true"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />
            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:background="@color/greenish"
                android:layout_gravity="center_vertical"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            >
            <ImageButton
                android:id="@+id/google_login"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/custom_btn"
                android:src="@drawable/google"
                android:padding="3dp"
                android:elevation="8dp"
                android:scaleType="fitCenter"
                android:layout_marginEnd="10dp"/>
            <ImageButton
                android:id="@+id/facebook_login"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:paddingTop="8dp"
                android:elevation="8dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/custom_btn"
                android:src="@drawable/facebook"

                android:scaleType="fitCenter"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>