<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:layout_marginHorizontal="10dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/card_bg_BW"
            android:orientation="vertical"
            android:paddingHorizontal="25dp"
            android:paddingBottom="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                >
                <TextView
                    android:id="@+id/history_bp_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="24/11/2022"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=", " />

                <TextView
                    android:id="@+id/history_bp_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="9:58:33"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                tools:ignore="RtlSymmetry">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/history_systolic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/motor_oil"
                        android:text="140"
                        android:textColor="@color/blue_dark"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/history_sys_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_toEndOf="@+id/history_systolic"
                        android:text="@string/systolic"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/history_sys_txt"
                        android:layout_marginStart="5dp"
                        android:layout_toEndOf="@+id/history_systolic"
                        android:text="@string/mmhg"

                        android:textSize="10sp" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/history_diastolic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/motor_oil"
                        android:text="85"
                        android:textColor="@color/Yellowish"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/history_dia_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_toEndOf="@+id/history_diastolic"
                        android:text="@string/diastolic"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/history_dia_txt"
                        android:layout_marginStart="5dp"
                        android:layout_toEndOf="@+id/history_diastolic"
                        android:text="@string/mmhg"

                        android:textSize="10sp" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/history_pulse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/motor_oil"
                        android:text="140"
                        android:textColor="@color/light_green"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/history_plus_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_toEndOf="@+id/history_pulse"
                        android:text="@string/pulse"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/history_plus_txt"
                        android:layout_marginStart="5dp"
                        android:layout_toEndOf="@+id/history_pulse"
                        android:text="@string/bmp"

                        android:textSize="10sp" />


                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>